# glibc-mcp

./: pyproject.toml
src/glibc_mcp/: __init__.py  impl.py  impl_test.py  types.py
