[project]
name = "glibc-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nick Cao", email = "nickcao@nichi.co" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.26.0",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
glibc-mcp = "glibc_mcp:main"
